# shellflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN-context-keybindings.md  README.md  package-lock.json  package.json  playwright.config.ts  render-verify.ps1  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release-please.yml
.onemanband/: config.jsonc
.shellflow/: config.jsonc
assets/: opengraph.acorn
docs/: repo_review.html  repo_review.md
e2e/: app.spec.ts
schemas/: config.schema.json  mappings.schema.json
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/macos/: AppIcon.icns
src-tauri/src/: config.rs  config.schema.json  default_config.jsonc  git.rs  lib.rs  mappings.rs  menu.rs  path_utils.rs  pty.rs  state.rs  template.rs  watcher.rs  workspace.rs  worktree.rs
src/app/: AppLayout.tsx  buildActionHandlers.ts  buildAppLayoutProps.ts  useAppController.ts  useAppDerivedState.ts  useAppGlobalBindings.ts  useCommitModal.test.ts  useCommitModal.ts  useExpandedProjects.ts
src/components/: Banner.test.tsx  Banner.tsx  CommitModal.tsx  ConfigErrorBanner.tsx  ConfirmModal.tsx  ContextMenu.tsx  CreateWorktreeModal.tsx  DeleteWorktreeModal.tsx  MergeModal.tsx  SplitContainer.tsx  StashModal.tsx  StatusIndicators.tsx  TerminalSearchControl.tsx
src/contexts/: SplitContext.tsx
src/hooks/: useActions.ts  useConfig.ts  useGitStatus.test.ts  useGitStatus.ts  useIndicators.test.ts  useIndicators.ts  usePty.test.ts  usePty.ts  useScratchTerminals.test.ts  useScratchTerminals.ts  useSessionTabs.ts  useSessions.test.ts  useSessions.ts  useSplitLayout.test.ts  useSplitLayout.ts  useTerminalFontSync.ts  useTerminalSearch.test.ts  useTerminalSearch.ts  useWorktrees.test.ts  useWorktrees.ts
src/lib/: actionHandlers.ts  actions.test.ts  actions.ts  contextParser.test.ts  contextParser.ts  contexts.test.ts  contexts.ts  (+10 more)
(+50 files in other folders)
