[package]
name = "onemanband"
version = "0.1.0"
description = "Git Worktree Orchestrator"
authors = ["Jamie Schembri"]
license = "MIT"
edition = "2021"

[lib]
name = "onemanband_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
git2 = "0.19"
portable-pty = "0.8"
notify = "7"
dirs = "5"
rand = "0.8"
thiserror = "2"
parking_lot = "0.12"
lazy_static = "1"
anyhow = "1"
glob = "0.3"
log = "0.4"
env_logger = "0.11"
