[package]
name = "shellflow"
version = "0.0.0"
description = "Parallel terminal and worktree orchestration"
authors = ["Jamie Schembri"]
license = "MIT"
edition = "2021"

[lib]
name = "shellflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
git2 = "0.19"
openssl = { version = "0.10", features = ["vendored"] }
portable-pty = "0.8"
notify = "7"
dirs = "5"
rand = "0.8"
petname = "2"
thiserror = "2"
parking_lot = "0.12"
lazy_static = "1"
anyhow = "1"
glob = "0.3"
json-strip-comments = "1"
minijinja = "2"
log = "0.4"
tauri-plugin-log = "2"
shell-escape = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false
